--- a/assets/css/style-final.css
+++ b/assets/css/style-final.css
@@ -11,7 +11,11 @@ body {
 }
 
 /* Navbar */
-.container-footer {
+#navbar-header {
+  height: 70px
+} 
+
+.navbar-container {
 	padding-left: 100px;
 	padding-right: 100px;
 }
@@ -23,10 +27,10 @@ body {
 
 .nav-item {
 	font-family: Tahoma !important;
-    font-weight: bolder;
-    font-size: smaller;
-    letter-spacing: 0.2px;
-    white-space: nowrap;
+  font-weight: bolder;
+  font-size: smaller;
+  letter-spacing: 0.2px;
+  white-space: nowrap;
 }
 
 .bg-black{
@@ -41,6 +45,39 @@ body {
 }
 
 
+.text-yellow{
+  color: #D1AB17;
+  
+}
+
+
 .li-footer {
 	padding-left: 30px;
+}
+
+#footer-contact {
+  font-family: Tahoma !important;
+  font-weight: bold;
+  font-size: 11px;
+  color: #ffffff;
+  white-space: nowrap;
+  letter-spacing: 0.1px;
+  padding-top: 30px;
+  padding-left: 130px;
+  padding-right: 130px;
+  padding-bottom: 30px;
+}
+
+#footer-contact p {
+  line-height: 0.1px;
+}
+
+@media (min-width: 992px) {
+    #footer-contact .imagen-autofin { text-align:left;}
+    #footer-contact .contact-autofin { text-align:right; }
+}
+
+@media (min-width: 548px) and (max-width: 991.98px) {
+    #footer-contact .imagen-autofin { text-align:center; padding-bottom: 30px; }
+    #footer-contact .contact-autofin { text-align:center; }
 }
