--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -11,6 +11,10 @@ body {
 }
 
 /* Navbar */
+#navbar-header {
+  height: 70px;
+}
+
 .navbar-container {
 	padding-left: 100px;
 	padding-right: 100px;
@@ -33,12 +37,4 @@ body {
 	background: #000000;
 	
 }
-
-
-/* Footer */
-.navbar-footer {
-  padding-left: 50px;
-  padding-right: 50px;
-}
-
 
