--- a/assets/css/style-sections.css
+++ b/assets/css/style-sections.css
@@ -11,6 +11,10 @@ body {
 }
 
 /* Navbar */
+#navbar-header {
+  height: 70px;
+} 
+
 .navbar-container {
 	padding-left: 100px;
 	padding-right: 100px;
@@ -23,10 +27,10 @@ body {
 
 .nav-item {
 	font-family: Tahoma !important;
-    font-weight: bolder;
-    font-size: smaller;
-    letter-spacing: 0.2px;
-    white-space: nowrap;
+  font-weight: bolder;
+  font-size: smaller;
+  letter-spacing: 0.2px;
+  white-space: nowrap;
 }
 
 .bg-black{
