--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -1,4 +1,17 @@
-html { 
+html {
+  width:100%;
+  height:100%;
+}
+
+body {
+  width:100%;
+  height:100%;
+  font-family: Tahoma !important;
+}
+
+#main { 
+  width:100%;
+  height:100%;
   background: url(../img/fondo-main.png) no-repeat left center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -6,9 +19,28 @@ html {
   background-size: cover;
 }
 
-body {
-  font-family: Tahoma !important;
+
+#sections { 
+  width:100%;
+  height:100%;
+  background: url(../img/fondo-sections.png) no-repeat top center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
+
+#footer { 
+  width:100%;
+  height:100%;
+  background: url(../img/fondo-final.png) no-repeat bottom center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
 
 /* Navbar */
 #navbar-header {
@@ -38,3 +70,45 @@ body {
 	
 }
 
+.bg-yellow{
+  background: #D1AB17;
+  
+}
+
+.text-yellow{
+  color: #D1AB17;
+  
+}
+
+
+/* Footer */
+.li-footer {
+  padding-left: 30px;
+}
+
+#footer-contact {
+  font-family: Tahoma !important;
+  font-weight: bold;
+  font-size: 11px;
+  color: #ffffff;
+  white-space: nowrap;
+  letter-spacing: 0.1px;
+  padding-top: 30px;
+  padding-left: 130px;
+  padding-right: 130px;
+  padding-bottom: 30px;
+}
+
+#footer-contact p {
+  line-height: 0.1px;
+}
+
+@media (min-width: 992px) {
+    #footer-contact .imagen-autofin { text-align:left;}
+    #footer-contact .contact-autofin { text-align:right; }
+}
+
+@media (min-width: 541px) and (max-width: 991.98px) {
+    #footer-contact .imagen-autofin { text-align:center; padding-bottom: 30px; }
+    #footer-contact .contact-autofin { text-align:center; }
+}
