--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -9,21 +9,12 @@ body {
   font-family: Tahoma !important;
 }
 
-#main { 
-  width:100%;
-  height:100%;
-  background: url(../img/fondo-main.png) no-repeat left center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
 
 
 #sections { 
   width:100%;
   height:100%;
-  background: url(../img/fondo-sections.png) no-repeat top center fixed; 
+  background: url(../img/fondo-sections.png) no-repeat left center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -40,16 +31,14 @@ body {
   background-size: cover;
 }
 
-
-
 /* Navbar */
 #navbar-header {
   height: 70px;
 }
 
 .navbar-container {
-	padding-left: 100px;
-	padding-right: 100px;
+	padding-left: 150px;
+	padding-right: 150px;
 }
 
 .navbar-brand {
@@ -75,11 +64,92 @@ body {
   
 }
 
-.text-yellow{
+.btn-autofin {
+  border-style: solid;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 25px;
+  padding-right: 25px;
+  border-color: #495057;
+  border-radius: 0px;
+  border-width: 2px;
+}
+
+.text-button {
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+}
+
+.text-yellow {
   color: #D1AB17;
+}
+
+/* Section main */
+#main { 
+  width:100%;
+  height:100%;
+  background: url(../img/fondo-main.png) no-repeat top left fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.main-auto-moto {
+  padding-top: 130px;
   
 }
 
+.auto-moto {
+  height: auto;
+  margin-left: 25px;
+  margin-right: 25px;
+  border-style: solid;
+  border-color: #D1AB17;
+  
+}
+
+.auto-moto-div {
+  padding-top: 45px;
+  padding-left: 65px;
+  padding-right: 90px;
+  padding-bottom: 45px;
+  
+}
+
+.auto-moto-header {
+  font-size: 1.5em;
+}
+
+.auto-moto-text {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 16px;
+  letter-spacing: 0.2px;
+  line-height: 20px;
+}
+
+.botones-main {
+  padding-top: 20px;
+  padding-left: 30px;
+}
+
+#btn-moto {
+  margin-left: -20px;
+}
+
+/*.img-auto { 
+  width:100%;
+  height:100%;
+  background: url(../img/auto.png) no-repeat bottom center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  z-index: 1;
+  position: absolute;
+}*/
 
 /* Footer */
 .li-footer {
@@ -108,7 +178,17 @@ body {
     #footer-contact .contact-autofin { text-align:right; }
 }
 
-@media (min-width: 541px) and (max-width: 991.98px) {
+@media (min-width: 509px) and (max-width: 991.98px) {
     #footer-contact .imagen-autofin { text-align:center; padding-bottom: 30px; }
     #footer-contact .contact-autofin { text-align:center; }
+    .main-auto-moto {padding-top: 100px;}
+    .auto-moto { margin-left: 0px; margin-right: 0px;}
+    .auto-moto-div { padding: 20px; }
+    .auto-moto-header {font-size: 1.5em; text-align:center; }
+    .auto-moto-text { margin-top: 130px; padding-top: 10px; padding-bottom: 0px; padding-left: 10px; padding-right: 10px; font-size: 14px !important; line-height: 18px; text-align:center !important; }
+    .div-auto { text-align: center; }
+    .div-moto { text-align: center; }
+    .botones-main { text-align:center; }
+    #btn-auto { margin-left: -20px; }
+
 }
