--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -151,6 +151,44 @@ body {
   position: absolute;
 }*/
 
+/* Comencemos */
+
+#comencemos { 
+  width:100%;
+  height:100%;
+  background: url(../img/fondo-sections.png) no-repeat top center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.comencemos {
+  padding-top: 30px;
+  margin-bottom: 130px;
+}
+
+.div-comencemos {
+  width: 70%;
+  height: auto;
+  margin-left: 90px;
+  margin-right: 100px;
+  border-style: solid;
+  border-width: 10px;
+  border-color: #495057;
+}
+
+.text-comencemos {
+  padding-top: 40px;
+  padding-left: 50px;
+  padding-right: 60px;
+  font-weight: bold;
+  font-size: x-large;
+  text-align: center;
+  line-height: normal;
+  color: #767676;
+}
+
 /* Footer */
 .li-footer {
   padding-left: 30px;
@@ -191,4 +229,7 @@ body {
     .botones-main { text-align:center; }
     #btn-auto { margin-left: -20px; }
 
+    .comencemos { padding-top: 130px; }
+    .div-comencemos { margin-left: 80px; }
+    .text-comencemos { padding-top: 50px; color: #ffffff; }
 }
