--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -9,28 +9,6 @@ body {
   font-family: Tahoma !important;
 }
 
-
-
-#sections { 
-  width:100%;
-  height:100%;
-  background: url(../img/fondo-sections.png) no-repeat left center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-#footer { 
-  width:100%;
-  height:100%;
-  background: url(../img/fondo-final.png) no-repeat bottom center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
 /* Navbar */
 #navbar-header {
   height: 70px;
@@ -56,12 +34,10 @@ body {
 
 .bg-black{
 	background: #000000;
-	
 }
 
 .bg-yellow{
   background: #D1AB17;
-  
 }
 
 .btn-autofin {
@@ -97,8 +73,7 @@ body {
 }
 
 .main-auto-moto {
-  padding-top: 130px;
-  
+  padding-top: 130px; 
 }
 
 .auto-moto {
@@ -107,7 +82,6 @@ body {
   margin-right: 25px;
   border-style: solid;
   border-color: #D1AB17;
-  
 }
 
 .auto-moto-div {
@@ -189,7 +163,76 @@ body {
   color: #767676;
 }
 
+/* secciones de productos */
+
+.sections { 
+  width:100%;
+  height:100%;
+  background: url(../img/fondo-sections.png) no-repeat left center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.productos {
+  padding-top: 130px;
+}
+
+.div_productos {
+  height: auto;
+  margin-right: 25px;
+
+}
+
+.logo-productos {
+  padding-top: 120px;
+  padding-bottom: 10px;
+  padding-left: 40px;
+  padding-right: 50px;
+  z-index: 1;
+}
+
+.text-productos {
+  padding-bottom: 120px;
+  padding-left: 40px;
+  padding-right: 130px;
+  color: #ffffff;
+  text-align: justify;
+  letter-spacing: 1px;
+  line-height: 20px;
+  z-index: 1;
+}
+
+.iconos-productos {
+  background-color: #bcbfc1;
+}
+
+.producto_portal_ces {
+  width:100%;
+  height:100%;
+  background: url(../img/fondo-portalces.jpg) no-repeat right center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-color: #bcbfc1;
+  filter: brightness(0.2);
+  z-index: -1;
+}
+
 /* Footer */
+
+#footer { 
+  width:100%;
+  height:100%;
+  background: url(../img/fondo-final.png) no-repeat bottom center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .li-footer {
   padding-left: 30px;
 }
@@ -232,4 +275,6 @@ body {
     .comencemos { padding-top: 130px; }
     .div-comencemos { margin-left: 80px; }
     .text-comencemos { padding-top: 30px; padding-left: 90px; color: #ffffff; font-size: large; letter-spacing: 1px; line-height: 25px;}
+
+    .productos { padding-top: 130px; }
 }
