--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -37,7 +37,7 @@ body {
 }
 
 .bg-yellow{
-  background: #D1AB17;
+  background: #d9b413;
 }
 
 .btn-autofin {
@@ -46,9 +46,9 @@ body {
   padding-bottom: 5px;
   padding-left: 25px;
   padding-right: 25px;
-  border-color: #495057;
+  border-color: #767676;
   border-radius: 0px;
-  border-width: 2px;
+  border-width: 3px;
 }
 
 .text-button {
@@ -58,7 +58,7 @@ body {
 }
 
 .text-yellow {
-  color: #D1AB17;
+  color: #d9b413;
 }
 
 /* Section main */
@@ -81,7 +81,7 @@ body {
   margin-left: 25px;
   margin-right: 25px;
   border-style: solid;
-  border-color: #D1AB17;
+  border-color: #d9b413;
 }
 
 .auto-moto-div {
@@ -149,7 +149,7 @@ body {
   margin-right: 100px;
   border-style: solid;
   border-width: 10px;
-  border-color: #495057;
+  border-color: #575753;
 }
 
 .text-comencemos {
@@ -160,7 +160,7 @@ body {
   font-size: x-large;
   text-align: center;
   line-height: normal;
-  color: #767676;
+  color: #575753;
 }
 
 /* secciones de productos */
@@ -205,10 +205,35 @@ body {
 }
 
 .iconos-productos {
-  background-color: #bcbfc1;
+  background-color: #575753;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
-.producto_portal_ces {
+.slider-productos {
+  background-color: #d9b413;
+}
+
+.descripcion-productos {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  background-color: #575753;
+}
+
+.item-carousel {
+  padding-top: 100px;
+  /*padding-bottom: 80px;*/
+}
+
+.carousel-indicators li {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+}
+
+/*.producto_portal_ces {
   width:100%;
   height:100%;
   background: url(../img/fondo-portalces.jpg) no-repeat right center fixed; 
@@ -219,7 +244,7 @@ body {
   background-color: #bcbfc1;
   filter: brightness(0.2);
   z-index: -1;
-}
+}*/
 
 /* Footer */
 
@@ -277,6 +302,7 @@ body {
     .text-comencemos { padding-top: 30px; padding-left: 90px; color: #ffffff; font-size: large; letter-spacing: 1px; line-height: 25px;}
 
     .productos { padding-top: 130px; }
+    .descripcion-productos { margin-top: 0px; }
     .text-productos { text-align: center; padding-top: 0px; padding-bottom: 20px; padding-right: 100px; padding-left: 100px;}
-    .logo-productos { text-align: center; padding-bottom: 0px;}
+    .logo-productos { text-align: center; padding-top: 5px; padding-bottom: 0px;}
 }
