--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -149,7 +149,7 @@ body {
   margin-right: 100px;
   border-style: solid;
   border-width: 10px;
-  border-color: #575753;
+  border-color: #292d31;
 }
 
 .text-comencemos {
@@ -160,7 +160,7 @@ body {
   font-size: x-large;
   text-align: center;
   line-height: normal;
-  color: #575753;
+  color: #292d31;
 }
 
 /* secciones de productos */
@@ -205,7 +205,7 @@ body {
 }
 
 .iconos-productos {
-  background-color: #575753;
+  background-color: #292d31;
   margin-top: 40px;
   margin-bottom: 40px;
   padding-top: 100px;
@@ -219,7 +219,7 @@ body {
 .descripcion-productos {
   margin-top: 40px;
   margin-bottom: 40px;
-  background-color: #575753;
+  background-color: #292d31;
 }
 
 .item-carousel {
