--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -61,19 +61,30 @@ body {
   color: #d9b413;
 }
 
-/* Section main */
-#main { 
-  width:100%;
-  height:100%;
-  background: url(../img/fondo-main.png) no-repeat top left fixed; 
+
+.full-bg {
+  height: 100%;
+  padding-top: 100px;
+
+
+  background-color: #000;
+  background-position: 50% 50%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* Section main */
+#main { 
+  width:100%;
+  height:100%;
+  background-image: url(../img/fondo-main.png) ; 
 }
 
 .main-auto-moto {
-  padding-top: 130px; 
+  /*padding-top: 130px; */
 }
 
 .auto-moto {
@@ -113,32 +124,17 @@ body {
   margin-left: -10px;
 }
 
-/*.img-auto { 
-  width:100%;
-  height:100%;
-  background: url(../img/auto.png) no-repeat bottom center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  z-index: 1;
-  position: absolute;
-}*/
 
 /* Comencemos */
 
-#comencemos { 
+#comencemos {  
   width:100%;
   height:100%;
-  background: url(../img/fondo-sections.png) no-repeat top center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-image: url(../img/fondo-sections.png);
 }
 
 .comencemos {
-  padding-top: 70px;
+  /*padding-top: 70px;*/
   margin-bottom: 130px;
 }
 
@@ -149,7 +145,7 @@ body {
   margin-right: 100px;
   border-style: solid;
   border-width: 10px;
-  border-color: #292d31;
+  border-color:rgb(44, 43, 43);
 }
 
 .text-comencemos {
@@ -160,7 +156,7 @@ body {
   font-size: x-large;
   text-align: center;
   line-height: normal;
-  color: #292d31;
+  color:rgb(44, 43, 43);
 }
 
 /* secciones de productos */
@@ -168,94 +164,66 @@ body {
 .sections { 
   width:100%;
   height:100%;
-  background: url(../img/fondo-sections.png) no-repeat left center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: url(../img/fondo-sections.png);
 }
 
 .productos {
-  padding-top: 130px;
+  /*padding-top: 130px;*/
 }
 
 .div_productos {
-  height: auto;
+  height: 120px;
   margin-right: 25px;
-
+  position: absolute;
+  z-index: 1;
 }
 
 .logo-productos {
-  padding-top: 120px;
-  padding-bottom: 10px;
-  padding-left: 40px;
-  padding-right: 50px;
-  z-index: 1;
+    padding-top: 15%;
+    padding-left: 40px;
+    padding-right: 50px;
 }
 
 .text-productos {
-  padding-bottom: 120px;
-  padding-left: 40px;
-  padding-right: 130px;
-  color: #ffffff;
+  padding-left: 10%;
+  padding-right: 20%;
+  color: #949596;
   text-align: justify;
   letter-spacing: 1px;
   line-height: 20px;
-  z-index: 1;
+  
 }
 
 .iconos-productos {
-  background-color: #292d31;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+    width: 8%;
+    height: 100%;
+    padding-bottom: 10%;
+    padding-left: 2%;
+    position: absolute;
 }
 
 .slider-productos {
+  width: 100%;
+  height: 100%;
+  
   background-color: #d9b413;
+  position: absolute;
+  z-index: 4;
 }
 
-.descripcion-productos {
-  margin-top: 40px;
-  margin-bottom: 40px;
-  background-color: #292d31;
-}
-
-.item-carousel {
-  padding-top: 100px;
-  /*padding-bottom: 80px;*/
-}
 
 .carousel-indicators li {
-  height: 10px;
-  width: 10px;
+  height: 7px;
+  width: 7px;
   border-radius: 50%;
 }
-
-/*.producto_portal_ces {
-  width:100%;
-  height:100%;
-  background: url(../img/fondo-portalces.jpg) no-repeat right center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-color: #bcbfc1;
-  filter: brightness(0.2);
-  z-index: -1;
-}*/
 
 /* Footer */
 
 #footer { 
   width:100%;
   height:100%;
-  background: url(../img/fondo-final.png) no-repeat bottom center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: url(../img/fondo-final.png); 
 }
 
 .li-footer {
@@ -297,12 +265,70 @@ body {
     .botones-main { text-align:center; }
     .btn-auto { margin-left: -30px; }
 
-    .comencemos { padding-top: 130px; }
+    /*.comencemos { padding-top: 130px; }*/
     .div-comencemos { margin-left: 80px; }
     .text-comencemos { padding-top: 30px; padding-left: 90px; color: #ffffff; font-size: large; letter-spacing: 1px; line-height: 25px;}
 
-    .productos { padding-top: 130px; }
+    /*.productos { padding-top: 130px; }*/
     .descripcion-productos { margin-top: 0px; }
     .text-productos { text-align: center; padding-top: 0px; padding-bottom: 20px; padding-right: 100px; padding-left: 100px;}
     .logo-productos { text-align: center; padding-top: 5px; padding-bottom: 0px;}
+}
+
+
+.div1 {
+
+    height: 350px;
+    background-color:rgb(44, 43, 43);
+    margin-left: 270px;
+    margin-right: 270px;
+    z-index: 1;
+    position: relative;
+}
+
+.div3 {
+  margin-top: -25px;
+    height: 400px;
+    background-color: #d9b413;
+    left: 8%;
+    z-index: 3;
+    right: 52%;
+    position: absolute;
+}
+
+.descripcion-productos {
+    height: 100%;
+    background-color: #000;
+    background-position: 0px 0px, 50% 50%;
+    background-size: auto, cover;
+    background-repeat: repeat, no-repeat;
+    left: 48%;
+    z-index: 4;
+    position: absolute;
+}
+
+.iconos-productos1 {
+  padding-top: 8%;
+}
+
+.iconos-productos2 {
+  padding-top: 13%;
+}
+
+.img-carousel-products {
+  padding-top: 15%;
+}
+
+.img-carousel-products2 {
+  padding-top: 35%;
+}
+
+#producto-portalces {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-portalces.jpg);
+  background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-portalces.jpg);  
+}
+
+#producto-panal {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-panal.jpg);
+  background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-panal.jpg);  
 }
