--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -196,7 +196,7 @@ body {
 
 .text-productos2 {
   padding-left: 10%;
-  padding-right: 10%;
+  padding-right: 15%;
   color: #949596;
   text-align: justify;
   letter-spacing: 1px;
@@ -386,4 +386,9 @@ body {
 #producto-trinidad {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-trinidad.jpg);
   background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-trinidad.jpg);  
+}
+
+#producto-spider {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-spider.jpg);
+  background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-spider.jpg);  
 }
