--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -210,6 +210,16 @@ body {
   
 }
 
+.text-productos3 {
+  padding-left: 10%;
+  padding-right: 10%;
+  color: #949596;
+  text-align: justify;
+  letter-spacing: 1px;
+  line-height: 20px;
+  
+}
+
 .iconos-productos {
     width: 8%;
     height: 100%;
@@ -300,6 +310,15 @@ body {
     .logo-productos { text-align: center; padding-top: 5px; padding-bottom: 0px;}
 }
 
+.div0 {
+
+    height: 450px;
+    background-color:rgb(44, 43, 43);
+    margin-left: 250px;
+    margin-right: 250px;
+    z-index: 1;
+    position: relative;
+}
 
 .div1 {
 
@@ -314,6 +333,16 @@ body {
 .div3 {
   margin-top: -25px;
     height: 400px;
+    background-color: #d9b413;
+    left: 8%;
+    z-index: 3;
+    right: 52%;
+    position: absolute;
+}
+
+.div6 {
+  /*margin-top: -25px;*/
+    height: 100%;
     background-color: #d9b413;
     left: 8%;
     z-index: 3;
@@ -406,4 +435,14 @@ body {
 #producto-fuerza {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-fuerza.jpg);
   background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-fuerza.jpg);  
+}
+
+#producto-mi-autofingps {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-miautofingps.jpg);
+  background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-miautofingps.jpg);  
+}
+
+#producto-buho {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-buho-gris.jpg);
+  background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.85)), url(../img/fondo-buho-gris.jpg);
 }
