--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -446,3 +446,21 @@ body {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-buho-gris.jpg);
   background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.85)), url(../img/fondo-buho-gris.jpg);
 }
+
+.slide-previous {
+      height: 450px;
+    width: 5%;
+    left: 13%;
+    position: absolute;
+    z-index: 1;
+    background-color: #ffffff00;
+}
+
+.slide-next {
+  height: 450px;
+    width: 5%;
+    right: 13%;
+    position: absolute;
+    z-index: 1;
+    background-color: white;
+}
