--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -139,19 +139,18 @@ body {
 }
 
 .div-comencemos {
-  width: 70%;
-  height: auto;
-  margin-left: 90px;
-  margin-right: 100px;
+  height: 60%;
+  margin-left: 270px;
+  margin-right: 270px;
   border-style: solid;
   border-width: 10px;
   border-color: #949596;
 }
 
 .text-comencemos {
-  padding-top: 40px;
-  padding-left: 50px;
-  padding-right: 60px;
+  padding-top: 5%;
+  padding-left: 20%;
+  padding-right: 20%;
   font-weight: bold;
   font-size: x-large;
   text-align: center;
