--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -84,7 +84,9 @@ body {
 }
 
 .main-auto-moto {
-  /*padding-top: 130px; */
+  height: 50%;
+  padding-left: 9%;
+  padding-right: 9%;
 }
 
 .auto-moto {
