--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -84,16 +84,31 @@ background-image: url(../img/fondo-sections.png);
 
 
 
-#main{
-	 background-image: url(../img/fondo-main.png) ; 
-	 background-repeat: no-repeat;
+#main{  background-repeat: no-repeat;
 	 background-position: center;
+	 background-image: url(../img/fondo-main.png) ; 
 }
 
-#comencemos {  
+#main > #comencemos {
+	display: none;
+}
+
+#main.comencemos > #comencemos {
+	display: block;
+}
+
+
+#main > #principal {
+	display: block;
+}
+
+#main.comencemos > #principal {
+	display: none;
+}
+
+#main.comencemos {  
  background-image: url(../img/fondo-sections.png);
-  background-repeat: no-repeat;
-	 background-position: center;
+
 
 }
 
@@ -222,4 +237,30 @@ background: rgba(255,255,255,0.8);
 
 .btn-moto {
   margin-left: -10px;
+}
+
+
+
+
+.box-comencemos {
+  position: relative;
+  width: 620px;
+  height: 400px;
+  margin-right: auto;
+  margin-left: auto;
+  color: #696782f2;
+}
+
+.div-comencemos {
+ border-style: solid;
+  border-width: 10px;
+  border-color: #696782f2;
+}
+
+.text-comencemos {
+  padding-top: 5%;
+  font-weight: bold;
+  font-size: x-large;
+  text-align: center;
+  line-height: normal;
 }
