--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -264,3 +264,86 @@ background: rgba(255,255,255,0.8);
   text-align: center;
   line-height: normal;
 }
+
+
+
+
+.box1 {
+  position: relative;
+  width: 800px;
+  height: 400px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0px 370px 40px 15px;
+
+  background-color:rgb(44, 43, 43);
+  z-index: 1;
+}
+
+.box-iconos {
+    width: 15px;
+    height: 100%;
+    padding-top: 90px;
+    padding-bottom: 20px;
+    position: absolute;
+}
+
+.box-iconos2 {
+    width: 15px;
+    height: 100%;
+    padding-top: 130px;
+    padding-bottom: 20px;
+    position: absolute;
+}
+
+.box-iconos-li {
+	padding-bottom: 7px;
+}
+
+.box2 {
+	width: 320px;
+  	margin-top: -25px;
+    height: 450px;
+    background-color: #d9b413;
+    left: 8%;
+    z-index: 3;
+    right: 52%;
+    position: absolute;
+}
+
+.box2-img-carousel {
+  width: 320px;
+}
+
+.box3-descripcion {
+    height: 100%;
+    background-color: #000;
+    background-position: 0px 0px, 50% 50%;
+    background-size: auto, cover;
+    background-repeat: repeat, no-repeat;
+    left: 48%;
+    z-index: 4;
+    position: absolute;
+}
+
+#box3-portalces {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-portalces.jpg);
+  background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-portalces.jpg);  
+}
+
+
+.box3-logo {
+    padding-top: 100px;
+    padding-left: 40px;
+    padding-right: 50px;
+}
+
+.box3-text {
+  padding-left: 10%;
+  padding-right: 20%;
+  color: #949596;
+  text-align: justify;
+  letter-spacing: 1px;
+  line-height: 20px;
+  
+}
