--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -317,6 +317,15 @@ background: rgba(255,255,255,0.8);
     position: absolute;
 }
 
+.box-iconos4 {
+    width: 15px;
+    height: 100%;
+    margin-left: 378px;
+    padding-top: 90px;
+    padding-bottom: 20px;
+    position: absolute;
+}
+
 .box-iconos-li {
 	padding-bottom: 7px;
 }
@@ -343,6 +352,28 @@ background: rgba(255,255,255,0.8);
     position: absolute;
 }
 
+.box4 {
+  position: relative;
+  width: 800px;
+  height: 400px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0px 15px 40px 370px;
+  background-color:rgb(44, 43, 43);
+  z-index: 1;
+}
+
+.box5 {
+	width: 320px;
+  	margin-top: -25px;
+    height: 450px;
+    background-color: #d9b413;
+    left: 52%;
+    z-index: 3;
+    right: 8%;
+    position: absolute;
+}
+
 .box2-img-carousel {
   width: 320px;
 }
@@ -358,9 +389,25 @@ background: rgba(255,255,255,0.8);
     position: absolute;
 }
 
+.box5-descripcion {
+    height: 100%;
+    background-color: #000;
+    background-position: 0px 0px, 50% 50%;
+    background-size: auto, cover;
+    background-repeat: repeat, no-repeat;
+    right: 48%;
+    z-index: 4;
+    position: absolute;
+}
+
 #box3-portalces {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-portalces.jpg);
   background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-portalces.jpg);  
+}
+
+#box3-trinidad {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-trinidad.jpg);
+  background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-trinidad.jpg);  
 }
 
 #box3-miautofin {
@@ -383,6 +430,13 @@ background: rgba(255,255,255,0.8);
     padding-top: 100px;
     padding-left: 40px;
     padding-right: 50px;
+}
+
+.box5-logo {
+    padding-top: 100px;
+    padding-left: 40px;
+    padding-right: 50px;
+    text-align: right;
 }
 
 .box3-logo2 {
