--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -326,6 +326,15 @@ background: rgba(255,255,255,0.8);
     position: absolute;
 }
 
+.box-iconos5 {
+    width: 15px;
+    height: 100%;
+    margin-left: 378px;
+    padding-top: 130px;
+    padding-bottom: 20px;
+    position: absolute;
+}
+
 .box-iconos-li {
 	padding-bottom: 7px;
 }
@@ -408,6 +417,11 @@ background: rgba(255,255,255,0.8);
 #box3-trinidad {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-trinidad.jpg);
   background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-trinidad.jpg);  
+}
+
+#box3-spider {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-spider.jpg);
+  background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-spider.jpg);  
 }
 
 #box3-miautofin {
