--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -439,6 +439,11 @@ background: rgba(255,255,255,0.8);
   background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.85)), url(../img/fondo-buho-gris.jpg);
 }
 
+#box3-fuerza {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(84, 84, 84, .9)), to(rgba(84, 84, 84, .9))), url(../img/fondo-fuerza.jpg);
+  background-image: linear-gradient(25deg, rgb(8, 8, 8), rgba(49, 48, 48, 0.9)), url(../img/fondo-fuerza.jpg);  
+}
+
 
 .box3-logo {
     padding-top: 100px;
@@ -450,6 +455,12 @@ background: rgba(255,255,255,0.8);
     padding-top: 100px;
     padding-left: 40px;
     padding-right: 50px;
+    text-align: right;
+}
+
+.box6-logo {
+    padding-top: 40px;
+    padding-left: 40px;
     text-align: right;
 }
 
@@ -468,6 +479,17 @@ background: rgba(255,255,255,0.8);
 }
 
 .box3-text2 {
+  padding-left: 40px;
+  padding-right: 40px;
+  color: #949596;
+  text-align: justify;
+  letter-spacing: 1px;
+  line-height: 20px;
+  font-size: 14px;
+}
+
+.box3-text3 {
+  padding-top: 20px;
   padding-left: 40px;
   padding-right: 40px;
   color: #949596;
