--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -50,6 +50,17 @@ height:100%
 	background: red;
 }
 
+.footer{
+	height: 130px;
+	position: fixed;
+	top: auto;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	width: 100%;
+	z-index: 10;
+}
+
 .bg-cover {
    background-position: 0px 0px, 50% 50%;
   background-size: auto, cover;
@@ -510,24 +521,27 @@ background: rgba(255,255,255,0.8);
 }
 
 .slide-previous {
-	height: 400px;
-    width: 100px;
-    margin-top: 150px;
-    left: 450px;
+	height: 40px;
+    width: 40px;
+    top: 180px;
+    left: -50px;
     position: absolute;
     z-index: 1;
-    background-color: #ffffff00;
+}
+
+.slide-previous a, .slide-next a {
+	color: white;
 }
 
 .slide-next {
-   	height: 400px;
-    width: 100px;
-    margin-top: 150px;
-    right: 410px;
+   	height: 40px;
+    width: 40px;
+    top: 180px;
+    right: -50px;
     position: absolute;
     z-index: 1;
-    background-color: #ffffff00;
 }
+
 
 .iconos-buho {
     width: 100px;
@@ -537,4 +551,64 @@ background: rgba(255,255,255,0.8);
   color: #949596;
   font-size: 10px;
   line-height: normal;
+}
+
+
+.bg-black{
+	background: #000000;
+}
+
+.bg-yellow{
+  background: #d9b413;
+}
+
+.li-footer {
+  padding-left: 30px;
+}
+
+#footer-contact {
+  height: 70px;
+  font-family: Tahoma !important;
+  font-weight: bold;
+  font-size: 11px;
+  color: #ffffff;
+  white-space: nowrap;
+  letter-spacing: 0.1px;
+  padding-top: 10px;
+  padding-left: 130px;
+  padding-right: 130px;
+  padding-bottom: 10px;
+}
+
+#footer-contact p {
+  line-height: 0.1px;
+}
+
+#footer-social {
+	height: 60px;
+}
+
+
+
+
+ 
+#my_video_modal .modal-dialog {
+    min-width: 80%;
+    margin: 30px auto;
+} 
+
+#my_video_modal .modal-body {
+  position:relative;
+  padding:0px;
+}
+
+#my_video_modal .close {
+  position:absolute;
+  right:-30px;
+  top:0;
+  z-index:999;
+  font-size:2rem;
+  font-weight: normal;
+  color:#fff;
+  opacity:1;
 }
