--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -1,7 +1,7 @@
 *,*:after,*:before{
 margin:0;
 padding:0;
-box-sizing:inherit
+
 }
 
 body,html{
@@ -46,12 +46,46 @@ height:100%
 	right: 0px;
 	width: 100%;
 	height:80px;
-	z-index: 10;
-	background: red;
+	z-index: 10; 
+
+	 background-image: -webkit-gradient(linear, left top, left bottom, color-stop(80%, #000), to(transparent));
+  background-image: linear-gradient(180deg, #000 80%, transparent);
 }
 
+a:link {
+	text-decoration: none;
+}
+
+.my-container {
+  width: 900px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.nav-item {
+  position: relative;
+  width: 13%;
+  padding: 30px 10px;
+  float: left;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  font-size: 14;
+  
+}
+
+.nav-item:hover{
+	color: white
+}
+
+.nav-item.logo {
+	width: 22%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+
 .footer{
-	height: 130px;
 	position: fixed;
 	top: auto;
 	bottom: 0px;
@@ -564,10 +598,12 @@ background: rgba(255,255,255,0.8);
 
 .li-footer {
   padding-left: 30px;
+  list-style: none;
+  width: 50px;
+  display: inline-block;
 }
 
 #footer-contact {
-  height: 70px;
   font-family: Tahoma !important;
   font-weight: bold;
   font-size: 11px;
@@ -575,20 +611,21 @@ background: rgba(255,255,255,0.8);
   white-space: nowrap;
   letter-spacing: 0.1px;
   padding-top: 10px;
-  padding-left: 130px;
-  padding-right: 130px;
   padding-bottom: 10px;
 }
 
 #footer-contact p {
-  line-height: 0.1px;
+	margin-bottom: 0px;
+  text-align: right;
 }
 
 #footer-social {
-	height: 60px;
+	padding: 6px;
 }
 
-
+.text-yellow {
+  color: #d9b413;
+}
 
 
  
