--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -433,6 +433,18 @@ background: rgba(255,255,255,0.8);
     position: absolute;
 }
 
+.box6 {
+  position: relative;
+  width: 800px;
+  height: 400px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0px 15px 40px 370px;
+  background-color:rgb(44, 43, 43);
+  z-index: 1;
+  margin-top: -110px;
+}
+
 .box2-img-carousel {
   width: 320px;
 }
