--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -675,7 +675,7 @@ background: rgba(255,255,255,0.8);
   }
 
   .img-menu-res2 {
-    width: 18%;
+    width: 45px;
     margin-top: 9px;
     padding-right: 9px;
   }
