--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -727,7 +727,7 @@ background: rgba(255,255,255,0.8);
     width: 580px;
   }
 
-  .box1, .box4, .box1-2 {
+  .box1, .box4, .box1-2, .box6 {
     width: 650px;
     height: 380px;
   }
