--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -800,5 +800,7 @@ background: rgba(255,255,255,0.8);
 
 @media screen and (max-width: 767px) {
 
-
+  .my-container {
+    text-align: center;
+  }
 }
