--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -821,4 +821,41 @@ background: rgba(255,255,255,0.8);
     padding-left: 0px;
   }
 
+  .box-y {
+    top: -170px;
+    width: 420px;
+    height: 230px;
+    padding: 15px 65px 40px 55px;
+    text-align: center;
+  }
+
+  .titulo-box-y {
+    font-size: 25px;
+  }
+
+  .auto {
+    margin-top: 160px;
+    margin-left: -230px;
+    width: 600px;
+  }
+
+  .text-box-y {
+    margin-left: -30px;
+    margin-right: -30px;
+    margin-top: 200px;
+    margin-bottom: 20px;
+    font-size: 13px;
+    line-height: 15px;
+  }
+
+  .btn-comencemos {
+    margin-top: 0px;
+    font-size: 11px;
+  }
+
+  .controles {
+    left: 150px;
+    top: 530px;
+  }
+
 }
