--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -839,11 +839,17 @@ background: rgba(255,255,255,0.8);
     width: 600px;
   }
 
+  .moto {
+    margin-top: 120px;
+    margin-left: -240px;
+    width: 600px;
+  }
+
   .text-box-y {
     margin-left: -30px;
     margin-right: -30px;
-    margin-top: 200px;
-    margin-bottom: 20px;
+    margin-top: 210px;
+    margin-bottom: 10px;
     font-size: 13px;
     line-height: 15px;
   }
@@ -854,8 +860,9 @@ background: rgba(255,255,255,0.8);
   }
 
   .controles {
-    left: 150px;
+    left: 140px;
     top: 530px;
   }
+
 
 }
