--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -864,5 +864,18 @@ background: rgba(255,255,255,0.8);
     top: 530px;
   }
 
+  .box-comencemos {
+    top: -50px;
+    width: 480px;
+  }
+
+  .text-comencemos {
+    padding-top: 25px;
+    padding-left: 120px;
+    padding-right: 120px;
+    line-height: 25px;
+    color: white;
+  }
+
 
 }
