--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -656,6 +656,10 @@ background: rgba(255,255,255,0.8);
     display: none;
   }
 
+  .box-iconos-responsive {
+    display: block;
+  }
+
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -795,6 +799,10 @@ background: rgba(255,255,255,0.8);
     width: 25px;
   }
 
+  .box-iconos-responsive {
+    display: none;
+  }
+
 }
 
 
@@ -875,6 +883,63 @@ background: rgba(255,255,255,0.8);
     padding-right: 120px;
     line-height: 25px;
     color: white;
+  }
+
+  .box1 {
+    width: 655px;
+    height: 600px;
+    padding: 0px;
+  }
+
+  .box-iconos {
+    display: none;
+  }
+
+  .box2 {
+    width: 100%;
+    margin-top: 0px;
+    height: 340px;
+    left: 0px;
+    z-index: 5;
+    right: 0px;
+  }
+
+  .carousel {
+    padding-left: 140px;
+  }
+
+  .carousel-inner {
+    width: 100%;
+  }
+
+  .box2-img-carousel {
+    width: 240px;
+    height: 0px;
+    display: block;
+    max-width: 100%;
+  }
+
+  .carousel-indicators {
+    bottom: 0px;
+    left: 260px;
+  }
+
+  .box3-logo {
+    padding-top: 350px;
+    padding-left: 0px;
+    padding-right: 0px;
+    text-align: center;
+  }
+
+
+  .box3-descripcion {
+    width: 100%;
+    height: 100%;
+    left: 0px
+  }
+
+  .box-iconos-responsive {
+    display: block;
   }
 
 
