--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -656,7 +656,7 @@ background: rgba(255,255,255,0.8);
     display: none;
   }
 
-  .box-iconos-responsive {
+  .box-iconos-responsive, .box-iconos-responsive2, .box-iconos-responsive3 {
     display: block;
   }
 
@@ -799,7 +799,7 @@ background: rgba(255,255,255,0.8);
     width: 25px;
   }
 
-  .box-iconos-responsive {
+  .box-iconos-responsive, .box-iconos-responsive2, .box-iconos-responsive3 {
     display: none;
   }
 
