--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -886,45 +886,44 @@ background: rgba(255,255,255,0.8);
     top: 530px;
   }
 
-  .box-comencemos, .box1, .box4, .box6 {
-    width: 100%;
+  .box-comencemos {
     height: 100%;
-    padding: 0px;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #000), to(transparent));
+    background-image: linear-gradient(180deg, #000 5%, transparent);
   }
 
-  .div-comencemos {
-    position: absolute;
-    left: 0%;
+  .embed-responsive {
+    width: 90%;
+    position: relative;
+    left: 5%;
     top: 0%;
     right: 0%;
     bottom: auto;
-    z-index: 2;
-    height: 35%;
-    margin-top: 10%;
-    margin-bottom: 0%;
-    padding: 10%;
   }
 
   .text-comencemos {
     position: absolute;
     left: 0%;
-    top: auto;
     right: 0%;
     bottom: 0%;
     z-index: 1;
     height: 60%;
-    padding-top: 10%;
-    padding-right: 15%;
-    padding-left: 15%;
-  }
-
-  .div-comencemos .embed-responsive {
-    height: 100%;
-    background-color: #fff;
+    padding-top: 7%;
+    padding-right: 20%;
+    padding-left: 20%;
+    line-height: 25px;
+    color: white;
+    text-align: center;
   }
 
   .text-comencemos p {
     text-align: center;
+  }
+
+  .box1, .box4, .box6 {
+    width: 100%;
+    height: 100%;
+    padding: 0px;
   }
 
   .box2, .box5 {
