--- a/assets/web/css/main.css
+++ b/assets/web/css/main.css
@@ -1207,4 +1207,24 @@ background: rgba(255,255,255,0.8);
     color: white;
     text-align: center;
   }
+
+  .box-iconos-responsive4 {
+    position: absolute;
+    height: 10%;
+    padding-top: 25%;
+    padding-left: 27%;
+    padding-bottom: 5%;
+  }
+}
+
+@media screen and (max-width: 354px) {
+
+  .box-iconos-responsive4 {
+    position: absolute;
+    height: 10%;
+    padding-top: 40%;
+    padding-left: 25%;
+    padding-bottom: 5%;
+  }
+
 }
